other-vpol/check-ingress-nginx-controller-version-and-annotation-policy/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-ingress-nginx-controller-version-and-annotation-policy
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../check-ingress-nginx-controller-version-and-annotation-policy.yaml
  - name: step-02
    try:
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: check-ingress-nginx-controller-version-and-annotation-policy
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - apply:
        file: good-resource.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'Policy check-ingress-nginx-controller-version-and-annotation-policy failed')): true
        file: bad-resource.yaml
